tests/fail/Finally.java
package fail;

import java.lang.System;

public class Finally {

  public static void main(String[] args ) {
    finally{
      a = "x";
    }
  }

}
